feat: add pod logs with sinceSeconds parameter and various enhancements
- Add getPodLogs overload method with sinceSeconds parameter in KubernetesService
- Add access log entry entity and repository for log management
- Add V30 migration for access log entry table
- Enhance AI analysis and copilot services
- Update Kubernetes, Prometheus, and monitoring configurations
- Add Jaeger deployment configuration
- Improve stress test and instance management features
- Update UI components for monitoring, instances, and Kubernetes pages